--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>T-Shirts</title>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
-  
-  
+  <div id="root"></div>
+  <script src="t-shirts.js" type="text/babel" data-type="module"></script>
 </body>
+
 </html>
